--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -137,7 +137,7 @@ var options = {
 ----
 
 [[environment]]
-===== `environment`
+==== `environment`
 
 * *Type:* String
 * *Default:* `process.env.NODE_ENV || 'development'`
