--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -28,10 +28,9 @@ Notes:
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
 
-==== Unreleased
 
-[float]
-===== Breaking changes
+[[release-notes-3.28.0]]
+==== 3.27.0 2022/01/17
 
 [float]
 ===== Features
@@ -49,10 +48,10 @@ Notes:
 This high memory usage could happen when application code starts async tasks
 (e.g. Promises, setTimeouts, async I/O) that outlive the APM Transaction
 (typically an HTTP request handler). The agent's async task tracking keeps a
-reference to the APM Transaction (and any Spans) until the async task completes.
-Before this change the APM Transaction would unintentionally prevent HTTP
-request and response objects from being garbage collected -- leading to high
-memory usage.
+reference to the APM Transaction (and any APM Spans) until the async task
+ends, thus extending the lifetime of those APM objects and the references
+they hold -- in particular, HTTP request and response objects. This could lead
+to higher memory usage.
 +
 With this change, those references are removed when APM Transactions and Spans
 are ended, and agent memory usage is now the same as what it was before
