--- a/docs/upgrading.asciidoc
+++ b/docs/upgrading.asciidoc
@@ -15,7 +15,7 @@ The Elastic APM Node.js Agent uses https://semver.org/[semantic versioning], and
 Before upgrading the agent, be sure to review the:
 
 * <<release-notes,Node.js APM Agent release notes>>
-* {apm-overview-ref-v}/agent-server-compatibility.html[APM Agent and Server compatibility chart]
+* {apm-guide-ref}/agent-server-compatibility.html[APM Agent and Server compatibility chart]
 
 The following upgrade guides are available:
 
