feat: add traceContinuationStrategy=restart_always config option
This adds a `traceContinutationStrategy` configuration option to allow
some control over how the APM Agent uses incoming trace-context headers
for context propagation. The default 'continue_always' value results in
the current behaviour of using 'traceparent' and 'tracestate' per the
W3C spec. A value of 'restart_always' will result in incoming
'traceparent' and 'tracestate' headers being *ignored*. This can be
useful for a service that is receiving problematic tracing headers from
an upstream service that is unmonitored (without root transactions in
ES, the APM UI has limitations) or otherwise out of the user's control
(sampling rate may not be what the user wants).

This is currently *experimental* while a design for
`trace_continuation_strategy` is being discussed at
https://github.com/elastic/apm/issues/286. This currently implements a
*subset* of the proposed design there -- `restart_external` is not yet
implemented.

--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -1124,3 +1124,28 @@ require('elastic-apm-node').start({
   ]
 })
 ----
+
+
+[[trace-continuation-strategy]]
+==== `traceContinuationStrategy`
+* *Type:* String
+* *Default:* `'continue_always'`
+* *Env:* `ELASTIC_APM_TRACE_CONTINUATION_STRATEGY`
+
+Warning: This configuration option is **experimental** and may change in
+non-major versions of the agent.
+
+This option allows some control on how the APM agent handles W3C trace-context
+headers on incoming requests. By default, the `traceparent` and `tracestate`
+headers are used per W3C spec for distributed tracing. However, in certain cases
+(typically where an Elastic-monitored service is receiving requests with
+`traceparent` headers from *unmonitored* services) it can be helpful to *not*
+use the incoming `traceparent` header.
+
+Valid values are:
+
+- `'continue_always'` - The current and default behavior. Every incoming
+  `traceparent` header determines the sampling decision and the trace-id.
+- `'restart_always'` - Always ignores the `traceparent` header of incoming
+  requests. A new trace-id will be generated and the sampling decision will be
+  made based on <<transaction-sample-rate,`transactionSampleRate`>>.
