--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -41,6 +41,19 @@ Notes:
   run-context of callbacks.  See {issues}2498[#2498] and the
   <<release-notes-3.26.0,v3.26.0 release notes>> which has a similar change.
 
+* Elasticsearch spans (from `elasticsearch`, `@elastic/elasticsearch`, and
+  `@elastic/elasticsearch-canary` instrumentation) will no longer have an HTTP
+  child span(s) for the underlying HTTP request. This is listed in this section
+  to provide awareness in case some users have custom analysis of APM trace
+  data that expects those HTTP spans.
+
+  Per https://github.com/elastic/apm/blob/main/specs/agents/tracing-spans.md#exit-spans[the APM Agent spec for exit spans], Elasticsearch spans are now marked as exit spans and as
+  a result, HTTP child spans are suppressed. ({issues}2000[#2000])
+
+  As part of this change, some HTTP context has been added to Elasticsearch
+  spans, when available: the HTTP response `status_code`, and the size of the
+  response body (`encoded_body_size`). ({issues}2484[#2484])
+
 [float]
 ===== Features
 
