--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -31,14 +31,27 @@ Notes:
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
 
+==== Unreleased
+
+* Enable support for redis v4 ({pull}2945[#2945])
+
+[float]
+===== Breaking changes
+
+[float]
+===== Features
+
+[float]
+===== Bug fixes
+
+[float]
+===== Chores
 
 [[release-notes-3.39.0]]
 ==== 3.39.0 2022/10/17
 
 [float]
 ===== Features
-
-* Enable support for redis v4 ({pull}2945[#2945])
 
 * Improve the granularity of data captured about downstream services, e.g.
   databases, for spans that represent an external call (known as "exit spans").
