--- a/docs/nextjs.asciidoc
+++ b/docs/nextjs.asciidoc
@@ -146,7 +146,7 @@ while true; do sleep 1; curl -i http://localhost:3000/api/hello; done
 Visit your Kibana APM app and, after a few seconds, you should see a service
 entry for your Next.js app. (The service name will be pulled from the "name"
 field in "package.json". It can be overriden with
-https://www.elastic.co/guide/en/apm/agent/nodejs/current/configuration.html#service-name[`serviceName`].) Here is an example:
+<<service-name,`serviceName`>>. Here is an example:
 
 image::./images/nextjs-my-app-screenshot.png[Kibana APM app showing Next.js my-app]
 
