--- a/docs/nextjs.asciidoc
+++ b/docs/nextjs.asciidoc
@@ -121,8 +121,7 @@ export ELASTIC_APM_SERVER_URL='https://...'
 export ELASTIC_APM_SECRET_TOKEN='...'
 ----
 
-See https://www.elastic.co/guide/en/apm/agent/nodejs/current/configuration.html[the
-APM configuration guide] for full details on supported configuration variables.
+See the <<configuration,agent configuration guide>> for full details on supported configuration variables.
 
 
 [float]
