--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -31,6 +31,26 @@ Notes:
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
 
+
+==== Unreleased
+
+[float]
+===== Breaking changes
+
+[float]
+===== Features
+
+* Capture HTTP context (status code, headers, etc.) on transactions (and
+  captured errors) for Lambda functions triggered by API Gateway.
+  ({issues}2419[#2419])
+
+[float]
+===== Bug fixes
+
+[float]
+===== Chores
+
+
 [[release-notes-3.40.1]]
 ==== 3.40.1 2022/11/15
 
