--- a/docs/fastify.asciidoc
+++ b/docs/fastify.asciidoc
@@ -50,7 +50,7 @@ var apm = require('elastic-apm-node').start({
   // Use if APM Server uses API keys for authentication
   apiKey: '',
 
-  // Set custom APM Server URL (default: http://localhost:8200)
+  // Set custom APM Server URL (default: http://127.0.0.1:8200)
   serverUrl: '',
 })
 
