--- a/docs/hapi.asciidoc
+++ b/docs/hapi.asciidoc
@@ -46,7 +46,7 @@ const apm = require('elastic-apm-node').start({
   // Use if APM Server uses API keys for authentication
   apiKey: '',
 
-  // Set custom APM Server URL (default: http://localhost:8200)
+  // Set custom APM Server URL (default: http://127.0.0.1:8200)
   serverUrl: '',
 })
 
