fix: Add `tracestate` to the `TransactionOptions` TypeScript type
This is the options parameter to `apm.startTransaction(..., options)`.

Fixes: #3061

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -49,6 +49,9 @@ Notes:
 [float]
 ===== Bug fixes
 
+* Add `tracestate` to the `TransactionOptions` TypeScript type for
+  `apm.startTransaction(..., options)`. ({issues}3061[#3061])
+
 [float]
 ===== Chores
 
