--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -49,6 +49,13 @@ Notes:
   values, e.g. `https://user:pass@...`, then the auth fields were not
   included in the actual HTTP request.  ({issues}2044[#2044])
 
+* Support for tracing/monitoring https://learn.microsoft.com/en-us/azure/azure-functions/[Azure Functions].
+  See the <<azure-functions>> document.
+  ({pull}3071[#3071], https://github.com/elastic/apm/blob/main/specs/agents/tracing-instrumentation-azure-functions.md[spec])
+
+[float]
+===== Bug fixes
+
 [float]
 ===== Chores
 
