feat: support restify@11
Also fix a bug in the bitrot.js dev util for the recent
Azure Functions addition.

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -44,6 +44,8 @@ Notes:
   See the <<azure-functions>> document.
   ({pull}3071[#3071], https://github.com/elastic/apm/blob/main/specs/agents/tracing-instrumentation-azure-functions.md[spec])
 
+* Support `restify@11`.
+
 [float]
 ===== Bug fixes
 
